--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Up and running</title>
+  <title>Homepage</title>
 </head>
-
 <body>
-  <div id="app"></div>
-  <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
-</body>
+<div class="profile">
+  <img src="./images/plane.jpg" alt="plane">
+  <h1>Up and running!</h1>
+</div>
+<script src="/main-bundle.js">
 
+</script>
+</body>
 </html>
