React installed for dev

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,7 @@
   <title>Homepage</title>
 </head>
 <body>
-<div class="profile">
-  <img src="./images/plane.jpg" alt="plane">
-  <h1>Up and running!</h1>
-</div>
+<div id="react-root"></div>
 <script src="/main-bundle.js">
 
 </script>
